Categorias verificadas listo. Fixes #6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -57,11 +57,11 @@
     
     <!-- Types of justice -->
     <string name="justice_1">Justicia\nen el\ntrabajo</string>
-    <string name="justice_2">Justicia\nen las\nfamilias</string>
+    <string name="justice_2">Justicia\npara\nfamilias</string>
     <string name="justice_3">Justicia\nvecinal y\ncomunitaria</string>
     <string name="justice_4">Justicia\npara\nciudadanos</string>
     <string name="justice_5">Justicia\npara\nemprendedores</string>
-    <string name="justice_6"></string>
+    <string name="justice_6">Otros temas de Justicia Cotidiana</string>
     
     <!-- Add Testimonio -->
     <string name="testimonios_add_name">Nombre</string>
