Cambios menores en tipografias y tamaños

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="testimonios_news">Testimonios recientes</string>
     <string name="testimonios_add_btn_new">Agregar testimonio</string>
     <string name="testimonios_add_new">Nuevo testimonio</string>
-    <string name="testimonios_seemore">Ver mas&#8230;</string>
+    <string name="testimonios_seemore">Ver mas</string>
     <string name="testimonios_nomore">Sin testimonios en esta categoría</string>
     
     <!-- Types of justice -->
